# 65C02_Project

./: .gitignore  arduinoInterface.py
Arduino_Programs/6502_monitor_maxi-v2/: 6502_monitor_maxi-v2.ino
Arduino_Programs/EEPROM_programmer_V2_/: EEPROM_programmer_V2_.ino
Assembly/: fibonacci.65c02.asm  fibonacci_v2.asm  helloWorld.asm  rotateLeds.asm  rule.asm  rule110.asm  test_via.asm
emulator/: Cargo.toml
emulator/src/: gui.rs  lcd.rs  logger.rs  main.rs  processor.rs  system.rs
emulator/src/system/: lcd.rs  via.rs
