[package]
name = "emulator"
version = "0.5.1"
authors = ["Thorgaran <thorgaran1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
w65c02s = "0.9.2"
native-windows-gui = "1.0.10"
native-windows-derive = "1.0.3"
chrono = "0.4.19"
clap = "2.33.3"
timer = "0.2.0"
spin_sleep = "1.0.0"